# AcyclicJoinNode

./: Cargo.toml  README.md
bench_queries/: cyclic_join.sql  flower.sql  nested_acyclic.sql  uop.sql  weird_triangle_join.sql
bench_queries/imdb/: 10a.sql  12a.sql  13a.sql  14a.sql  15a.sql  18a.sql  1a.sql  20a.sql  22a.sql  25a.sql  28a.sql  29a.sql  30a.sql  31a.sql  33a.sql  4a.sql  5a.sql  7a.sql  8a.sql  9a.sql
bench_queries/tpc-ds/: schema.sql
bench_queries/tpc-ds/queries/: q1.sql  q12.sql  q16.sql  q2.sql  q20.sql  q21.sql  q30.sql  q32.sql  q37.sql  q40.sql  q5.sql  q72.sql  q77.sql  q80.sql  q82.sql  q85.sql  q92.sql  q94.sql  q95.sql  q98.sql
bench_queries/tpc-h/: schema.ddl
bench_queries/tpc-h/queries/: q11.sql  q15.sql
data/: customer.csv  orders.csv  products.csv
inserts/: uop_orders.sql  uop_products.sql  uop_users.sql
schemas/: cyclic_schema.sql  flower.sql  imdb_schema.sql  uop.sql  weird_triangle_schema.sql
src/: equivalence_list.rs  execution_planner.rs  lib.rs  node.rs  optimizer.rs
src/hyper/: hypergraph.rs  join_tree.rs  mod.rs
