[package]
name = "acyclicjoin_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", features = ["std"] }
async-recursion = "1.1.0"
async-trait = "0.1.77"
datafusion = "36.0.0"
futures = "0.3.30"
itertools = "0.12.1"
paste = "1.0.14"
slab = "0.4.9"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
yannakakis-join-implementation = { version = "0.1.0", path = "../yannakakis" }


[features]
filters = []
